fixed issue with horizontal expansion after collapsing

--- a/task-list.css
+++ b/task-list.css
@@ -84,7 +84,6 @@
     height: min-content;
     height: 0;
     opacity: 0;
-    white-space: nowrap;
     padding: 0;
     margin: 0;
     border: none;
